<resources>
    <string name="app_name">ContactsApp</string>
    <string name="contact_name">Contact Name</string>
    <string name="contact_email">Contact Email</string>
    <string name="contact_phone">Contact Phone</string>
    <string name="contact_birthday">Contact Birthday</string>
    <string name="save_contact">Save Contact</string>
    <string name="title_activity_contact_form">ContactFormActivity</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="title_activity_edit_contact">EditContactActivity</string>
</resources>